environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-lab-deployment
  labels:
    app: demo-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-lab
  template:
    metadata:
      labels:
        app: demo-lab
    spec:
      containers:
      - name: demo-lab
        image: javierk38/demo-lab:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
