environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-lab-service
spec:
  selector:
    app: demo-lab
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
  type: LoadBalancer
